--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h1>Recepten</h1>
 	<nav>
 		<ul>
+			veraander
 			<li><a href="pannenkoeken.html">Pannenkoeken</a></li>
 			<li><a href="wafels.html">Wafels</a></li>
 			<li><a href="oliebollen.html">Oliebollen</a></li>
